--- a/EDAV_project/EDAV_project/Templates/main.html
+++ b/EDAV_project/EDAV_project/Templates/main.html
@@ -84,7 +84,7 @@
       <div class="container">
         <ul class="nav navbar-nav" style="position:absolute;left:60px;">
           <li class="active"><a href="./">NYC Hotel Finder</a></li>
-          <li><a href="/">Hotel distribution</a></li>
+          <li><a href="/report">Hotel distribution</a></li>
           <li><a href="/about_us">About US</a></li>
         </ul>
       </div>
