--- a/EDAV_project/EDAV_project/Templates/About_Us.html
+++ b/EDAV_project/EDAV_project/Templates/About_Us.html
@@ -18,8 +18,8 @@
     	  <div class="container">
         	<ul class="nav navbar-nav" style="position:absolute;left:60px;">
           		<li><a href="/">NYC Hotel Finder</a></li>
-          		<li><a href="/">Hotel distribution</a></li>
-         	 	<li><a class="active">About US</a></li>
+          		<li><a href="/report">Hotel distribution</a></li>
+         	 	<li class="active"><a href="./">About US</a></li>
         	</ul>
       	</div>
 	</div>
